src/test/ui/error-codes/E0301.stderr
error[E0596]: cannot borrow `option` as mutable, as it is immutable for the pattern guard
  --> $DIR/E0301.rs:4:19
   |
LL |         option if option.take().is_none() => {},
   |                   ^^^^^^ cannot borrow as mutable
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
